--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <meta charset="utf-8" />
     <title>Ajax Example</title>
   </head>
+  <body>
+    <h2>Github User Info</h2>
+    <script src="index.js"></script>
+  </body>
 </html>
